--- a/InterconnectionViewer.xhtml
+++ b/InterconnectionViewer.xhtml
@@ -7,19 +7,19 @@
 
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css"></link>
 
-<script type="text/javascript" src="jquery-1.7.2.js"></script>
-<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+<script type="text/javascript" src="lib/jquery-1.7.2.js"></script>
+<script src="lib/jquery-ui.js"></script>
 
 <script type="text/javascript"
-	src="d3.v2.js"></script>
-<script type="text/javascript" src="FileSaver.js"></script>
-<script type="text/javascript" src="svg-pan-zoom.js"></script>
+	src="lib/d3.v2.js"></script>
+<script type="text/javascript" src="lib/FileSaver.js"></script>
+<script type="text/javascript" src="lib/svg-pan-zoom.js"></script>
 
-<link href="Force.css" rel="stylesheet" type="text/css"></link>
+<link href="InterconnectionViewer.css" rel="stylesheet" type="text/css"></link>
 
-<script type="text/javascript" src="packages.js"></script>
-<script type="text/javascript" src="d3.layout.js"></script>
-<script type="text/javascript" src="Force.js"></script>
+<script type="text/javascript" src="lib/packages.js"></script>
+<script type="text/javascript" src="lib/d3.layout.js"></script>
+<script type="text/javascript" src="InterconnectionViewer.js"></script>
 
 </head>
 <body class="no_select">
