Improved loading of data json files.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-    <a href="InterconnectionViewer.xhtml">InterconnectionViewer.xhtml</a>
+    <a href="InterconnectionViewer.xhtml">Default X48 Emulator</a><br />
+    <a href="InterconnectionViewer.xhtml?dataFile=data/Ipsidy-IdACS-imports.json">Ipsidy - IdACS</a>
 </body>
 </html>
